<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/canchab">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rf" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/name_player_1"
                android:textStyle="bold"
                android:textColor="#FDFEFE"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/roger_federer_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="#FDFEFE"
                android:textStyle="bold"
                android:textSize="36sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addAceForRogerFederer"
                android:text="@string/ace_button"
                android:textColor="#FDFEFE" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addFirstServeForRogerFederer"
                android:text="@string/first_serve_button"
                android:textColor="#FDFEFE" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addSecondServeForRogerFederer"
                android:text="@string/second_serve_button"
                android:textColor="#FDFEFE" />
        </LinearLayout>


        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="0dp"
            android:background="#FDFEFE" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rnf" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/name_player_2"
                android:textStyle="bold"
                android:textColor="#FDFEFE"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rafael_nadal_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:textColor="#FDFEFE"
                android:textStyle="bold"
                android:textSize="36sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addAceForRafaelNadal"
                android:text="@string/ace_button"
                android:textColor="#FDFEFE" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addFirstServeForRafaelNadal"
                android:text="@string/first_serve_button"
                android:textColor="#FDFEFE" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="addSecondServeForRafaelNadal"
                android:text="@string/second_serve_button"
                android:textColor="#FDFEFE" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="resetScore"
        android:text="@string/new_game_button"
        android:textColor="#FDFEFE" />


</RelativeLayout>
